syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./;pb";
package message;

message SendMessageRequest {
  string message = 1;
}

message SendMessageResponse {
  string result = 1;
}

message ReceiveResponse {
  string message = 1;
}

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc ReceiveMessage(google.protobuf.Empty) returns (stream ReceiveResponse);
}
